# jdpub

./: .gitignore  Cargo.toml  README.md  justfile  shell.nix
.cargo/: config.toml
.mise/: config.toml
examples/: parser.toml
metadata/config/: shoushetsuka.toml
metadata/language/jp/: .gitignore
src/: book.rs  cli.rs  config.rs  logging.rs  main.rs  prelude.rs  util.rs
src/export/: epub.rs  html.rs  mod.rs
src/import/: epub.rs  mod.rs
src/language/: mod.rs
src/parsing/: mod.rs
tests/: mushoku_chapter1.toml
