[package]
name = "jdpub"
version = "0.4.0"
edition = "2024"

[dependencies]

anyhow = "1.0.100"

futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.47.1", features = ["sync", "rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"

# Logging:
colored = "3.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-test = "0.2"

durf-parser = { path = "../durf/crates/durf-parser", version = "0.0.1" }


# Lang
charabia = { version = "0.9.9", default-features = false, features = ["japanese"] }
jmdict-fast = { verison = "0.1.1", path = "../jmdict-fst/jmdict-fast" }
wana_kana = "4.0.0"
# jmdict-fast = "0.1.1"
# jmdict-rs = "0.1.2"
# ejdict_rs = "0.0.4"

# jlpt
csv = "1.4.0"
serde = { version = "1", features = ["derive"] }

# HTML
build_html = "2.7.0"
uuid = { version = "1.19.0", features = ["v4"] }

# EPUB
epub-builder = "0.8.2"

# File
rust-embed = { version = "8.11.0", features = ["include-exclude", "compression"] }
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.7"

# Util
shellexpand = "3.1.1"
chrono = "0.4.43"
